Allow authorization using API key
